--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <div>
+        <div class="row-phone">
             <img src="assets/ZotTimeLogo.jpg" alt="" id="anteaterLogo">
             <img src="assets/jzxYHWV.png" alt="" id="anteaterLogo">
         </div>
